[package]
name = "ppt-undo"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process-memory = "0.4.0"
inputbot = "0.5.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = [
    "impl-default",
    "psapi",
    "processthreadsapi",
    "errhandlingapi",
    "winnt",
    "handleapi",
    "memoryapi",
    "debugapi",
    "winbase",
    "minwinbase"
]